--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 ### SBT ###
 # Simple Build Tool
-# http://www.scala-sbt.org/release/docs/Getting-Started/Directories.html#configuring-version-control
+# com.dogs.http://www.scala-sbt.org/release/docs/Getting-Started/Directories.html#configuring-version-control
 
 target/
 lib_managed/
